feat: added creating child process

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fs:delete": "node src/fs/delete.js",
     "fs:list": "node src/fs/list.js",
     "fs:read": "node src/fs/read.js",
+    "cli:args": "node src/cli/args.js --props1 value1 --props2 value2 --props3 value3",
     "cli:env": "node src/cli/env.js",
     "modules:cjsToEsm": "node src/modules/cjsToEsm.mjs",
     "hash:calcHash": "node src/hash/calcHash.js",
@@ -19,7 +20,8 @@
     "streams:write": "node src/streams/write.js",
     "zip:compress": "node src/zip/compress.js",
     "zip:decompress": "node src/zip/decompress.js",
-    "wt:main": "node src/wt/main.js"
+    "wt:main": "node src/wt/main.js",
+    "cp:cp": "node src/cp/cp.js"
   },
   "repository": {
     "type": "git",
